@@ -39,6 +39,6 @@ Lucas MASSE: various patches for Solaris support
 Adam BUCHBINDER: various patches 
 Bernhard Denner: various patches
 Yoann Le Bihan: Solaris patches
-Andreas Xenos: MacOSX patches
+Andreas Xenos: MacOSX patches and Parallels support
 Francois Laupetre: LVM modules
 Christophe Borivant
