@@ -1,5 +1,6 @@
 Revision history for Ocsinventory::Agent
 
+       * New Backend/Virtualization/Parallels.pm module for Parallels virtual machines inventory
        * Plugin Processes moved as module
        * Fix bug #911491 for BSD
        * Fix bug #873377 for Gentoo
